--- a/Исследование сервиса Яндекс.Музыка/1. Исследование сервиса Яндекс.Музыка.ipynb
+++ b/Исследование сервиса Яндекс.Музыка/1. Исследование сервиса Яндекс.Музыка.ipynb
@@ -8,7 +8,7 @@
     "id": "E0vqbgi9ay0H"
    },
    "source": [
-    "# Яндекс.Музыка"
+    "# Исследование сервиса Яндекс.Музыка"
    ]
   },
   {
@@ -19,24 +19,13 @@
     "id": "VUC88oWjTJw2"
    },
    "source": [
-    "Сравнение Москвы и Петербурга окружено мифами. Например:\n",
-    " * Москва — мегаполис, подчинённый жёсткому ритму рабочей недели;\n",
-    " * Петербург — культурная столица, со своими вкусами.\n",
-    "\n",
-    "На данных Яндекс Музыки вы сравните поведение пользователей двух столиц.\n",
-    "\n",
     "**Цель исследования** — проверьте три гипотезы:\n",
     "1. Активность пользователей зависит от дня недели. Причём в Москве и Петербурге это проявляется по-разному.\n",
     "2. В понедельник утром в Москве преобладают одни жанры, а в Петербурге — другие. Так же и вечером пятницы преобладают разные жанры — в зависимости от города. \n",
     "3. Москва и Петербург предпочитают разные жанры музыки. В Москве чаще слушают поп-музыку, в Петербурге — русский рэп.\n",
     "\n",
-    "**Ход исследования**\n",
-    "\n",
-    "Данные о поведении пользователей вы получите из файла `yandex_music_project.csv`. О качестве данных ничего не известно. Поэтому перед проверкой гипотез понадобится обзор данных. \n",
-    "\n",
-    "Вы проверите данные на ошибки и оцените их влияние на исследование. Затем, на этапе предобработки вы поищете возможность исправить самые критичные ошибки данных.\n",
-    " \n",
-    "Таким образом, исследование пройдёт в три этапа:\n",
+
+    "План работы:\n",
     " 1. Обзор данных.\n",
     " 2. Предобработка данных.\n",
     " 3. Проверка гипотез.\n",
@@ -53,7 +42,6 @@
    "source": [
     "## Обзор данных\n",
     "\n",
-    "Составьте первое представление о данных Яндекс Музыки.\n",
     "\n",
     "\n"
    ]
@@ -69,9 +57,7 @@
     ]
    },
    "source": [
-    "**Задание 1**\n",
-    "\n",
-    "Основной инструмент аналитика — `pandas`. Импортируйте эту библиотеку."
+    "Испортируем библиотеку"
    ]
   },
   {
@@ -97,8 +83,6 @@
     ]
    },
    "source": [
-    "**Задание 2**\n",
-    "\n",
     "Прочитайте файл `yandex_music_project.csv` из папки `/datasets` и сохраните его в переменной `df`:"
    ]
   },
@@ -125,10 +109,9 @@
     ]
    },
    "source": [
-    "**Задание 3**\n",
     "\n",
     "\n",
-    "Выведите на экран первые десять строк таблицы:"
+    "Выведем на экран первые десять строк таблицы:"
    ]
   },
   {
@@ -320,10 +303,9 @@
     ]
    },
    "source": [
-    "**Задание 4**\n",
     "\n",
     "\n",
-    "Одной командой получить общую информацию о таблице c помощью метода `info()`:"
+    "Получим общую информацию о таблице c помощью метода `info()`:"
    ]
   },
   {
@@ -392,13 +374,6 @@
     ]
    },
    "source": [
-    "**Задание 5**\n",
-    "\n",
-    "**Вопрос со свободной формой ответа**\n",
-    "\n",
-    "В названиях колонок видны три нарушения стиля:\n",
-    "1. Строчные буквы сочетаются с прописными.\n",
-    "2. Встречаются пробелы."
    ]
   },
   {
@@ -427,7 +402,7 @@
    },
    "source": [
     "## Предобработка данных\n",
-    "Исправьте стиль в заголовках столбцов, исключите пропуски. Затем проверьте данные на дубликаты."
+    "Исправим стиль в заголовках столбцов, исключите пропуски. Проверим данные на дубликаты."
    ]
   },
   {
@@ -443,9 +418,8 @@
    "source": [
     "### Стиль заголовков\n",
     "\n",
-    "**Задание 6**\n",
     "\n",
-    "Выведите на экран названия столбцов:"
+    "Выведем на экран названия столбцов:"
    ]
   },
   {
@@ -479,19 +453,9 @@
     ]
    },
    "source": [
-    "**Задание 7**\n",
     "\n",
     "\n",
-    "Приведите названия в соответствие с хорошим стилем:\n",
-    "* несколько слов в названии запишите в «змеином_регистре»,\n",
-    "* все символы сделайте строчными,\n",
-    "* устраните пробелы.\n",
-    "\n",
-    "Для этого переименуйте колонки так:\n",
-    "* `'  userID'` → `'user_id'`;\n",
-    "* `'Track'` → `'track'`;\n",
-    "* `'  City  '` → `'city'`;\n",
-    "* `'Day'` → `'day'`."
+    "Приведем названия в соответствие с хорошим стилем:\n",
    ]
   },
   {
@@ -520,7 +484,7 @@
     "**Задание 8**\n",
     "\n",
     "\n",
-    "Проверьте результат. Для этого ещё раз выведите на экран названия столбцов:"
+    "Выведем на экран названия столбцов:"
    ]
   },
   {
@@ -558,7 +522,7 @@
     "\n",
     "**Задание 9**\n",
     "\n",
-    "Сначала посчитайте, сколько в таблице пропущенных значений. Для этого достаточно двух методов `pandas`:"
+    "Посчитаем количество пропущенных значений:"
    ]
   },
   {
@@ -614,9 +578,8 @@
     ]
    },
    "source": [
-    "**Задание 10**\n",
     "\n",
-    "Замените пропущенные значения в столбцах `track`, `artist` и `genre` на строку `'unknown'`. Для этого создайте список `columns_to_replace`, переберите его элементы циклом `for` и для каждого столбца выполните замену пропущенных значений:"
+    "Заменим пропущенные значения в столбцах `track`, `artist` и `genre` на строку `'unknown'`. Создадим`columns_to_replace`, переберем его элементы циклом `for` и для каждого столбца заменим пропущенных значений:"
    ]
   },
   {
@@ -645,9 +608,8 @@
     ]
    },
    "source": [
-    "**Задание 11**\n",
     "\n",
-    "Убедитесь, что в таблице не осталось пропусков. Для этого ещё раз посчитайте пропущенные значения."
+    "Посчитаем пропущенные значения."
    ]
   },
   {
@@ -690,9 +652,8 @@
    "source": [
     "### Дубликаты\n",
     "\n",
-    "**Задание 12**\n",
     "\n",
-    "Посчитайте явные дубликаты в таблице одной командой:"
+    "Посчитаем явные дубликаты в таблице:"
    ]
   },
   {
@@ -726,9 +687,8 @@
     ]
    },
    "source": [
-    "**Задание 13**\n",
     "\n",
-    "Вызовите специальный метод `pandas`, чтобы удалить явные дубликаты:"
+    "Удалим явные дубликаты:"
    ]
   },
   {
@@ -754,9 +714,8 @@
     ]
    },
    "source": [
-    "**Задание 14**\n",
     "\n",
-    "Ещё раз посчитайте явные дубликаты в таблице — убедитесь, что полностью от них избавились:"
+    "Посчитаем еще раз количество явных дубликатов:"
    ]
   },
   {
@@ -787,8 +746,7 @@
     "id": "QlFBsxAr_Zct"
    },
    "source": [
-    "Теперь избавьтесь от неявных дубликатов в колонке `genre`. Например, название одного и того же жанра может быть записано немного по-разному. Такие ошибки тоже повлияют на результат исследования."
-   ]
+ ]
   },
   {
    "cell_type": "markdown",
@@ -801,12 +759,8 @@
     ]
    },
    "source": [
-    "**Задание 15**\n",
     "\n",
-    "Выведите на экран список уникальных названий жанров, отсортированный в алфавитном порядке. Для этого:\n",
-    "* извлеките нужный столбец датафрейма, \n",
-    "* примените к нему метод сортировки,\n",
-    "* для отсортированного столбца вызовите метод, который вернёт уникальные значения из столбца."
+    "Избавимся от неявных дубликатов в столбце genre:\n",
    ]
   },
   {
@@ -884,17 +838,9 @@
     ]
    },
    "source": [
-    "**Задание 16**\n",
     "\n",
-    "Просмотрите список и найдите неявные дубликаты названия `hiphop`. Это могут быть названия с ошибками или альтернативные названия того же жанра.\n",
-    "\n",
-    "Вы увидите следующие неявные дубликаты:\n",
-    "* *hip*,\n",
-    "* *hop*,\n",
-    "* *hip-hop*.\n",
-    "\n",
-    "Чтобы очистить от них таблицу используйте метод `replace()` с двумя аргументами: списком строк-дубликатов (включащий *hip*, *hop* и *hip-hop*) и строкой с правильным значением. Вам нужно исправить колонку `genre` в таблице `df`: заменить каждое значение из списка дубликатов на верное. Вместо `hip`, `hop` и `hip-hop` в таблице должно быть значение `hiphop`:"
-   ]
+    "Найдем неявные дубликаты названия `hiphop`.\n",
+ ]
   },
   {
    "cell_type": "code",
@@ -921,15 +867,8 @@
     ]
    },
    "source": [
-    "**Задание 17**\n",
     "\n",
-    "Проверьте, что заменили неправильные названия:\n",
-    "\n",
-    "*   hip\n",
-    "*   hop\n",
-    "*   hip-hop\n",
-    "\n",
-    "Выведите отсортированный список уникальных значений столбца `genre`:"
+    "Выведем отсортированный список уникальных значений столбца `genre`:"
    ]
   },
   {
@@ -1066,11 +1005,7 @@
     ]
    },
    "source": [
-    "**Задание 18**\n",
-    "\n",
-    "Для тренировки сначала выполните каждый из расчётов по отдельности. \n",
-    "\n",
-    "Оцените активность пользователей в каждом городе. Сгруппируйте данные по городу и посчитайте прослушивания в каждой группе.\n",
+    "Оценим активность пользователей в каждом городе. Сгруппируем данные по городу и посчитаем прослушивания в каждой группе.\n",
     "\n"
    ]
   },
@@ -1111,9 +1046,7 @@
    "source": [
     "В Москве прослушиваний больше, чем в Петербурге. Из этого не следует, что московские пользователи чаще слушают музыку. Просто самих пользователей в Москве больше.\n",
     "\n",
-    "**Задание 19**\n",
-    "\n",
-    "Теперь сгруппируйте данные по дню недели и подсчитайте прослушивания в понедельник, среду и пятницу. Учтите, что в данных есть информация только о прослушиваниях только за эти дни.\n"
+    "Теперь сгруппируем данные по дню недели и подсчитаем прослушивания в понедельник, среду и пятницу.\n"
    ]
   },
   {
@@ -1163,23 +1096,13 @@
     ]
    },
    "source": [
-    "**Задание 20**\n",
     "\n",
     "\n",
-    "Вы видели, как работает группировка по городу и по дням недели. Теперь напишите функцию, которая объединит два эти расчёта.\n",
+    "Напишем функцию, которая объединит два эти расчёта.\n",
     "\n",
-    "Создайте функцию `number_tracks()`, которая посчитает прослушивания для заданного дня и города. Ей понадобятся два параметра:\n",
-    "* день недели,\n",
-    "* название города.\n",
+    "Создадим функцию `number_tracks()`, которая посчитает прослушивания для заданного дня и города. \n",
     "\n",
-    "В функции сохраните в переменную строки исходной таблицы, у которых значение:\n",
-    "  * в колонке `day` равно параметру `day`,\n",
-    "  * в колонке `city` равно параметру `city`.\n",
-    "\n",
-    "Для этого примените последовательную фильтрацию с логической индексацией (или сложные логические выражения в одну строку, если вы уже знакомы с ними).\n",
-    "\n",
-    "Затем посчитайте значения в столбце `user_id` получившейся таблицы. Результат сохраните в новую переменную. Верните эту переменную из функции."
-   ]
+]
   },
   {
    "cell_type": "code",
@@ -1208,9 +1131,8 @@
     ]
    },
    "source": [
-    "**Задание 21**\n",
     "\n",
-    "Вызовите `number_tracks()` шесть раз, меняя значение параметров — так, чтобы получить данные для каждого города в каждый из трёх дней."
+    "Вызовим `number_tracks()` шесть раз, меняя значение параметров — так, чтобы получить данные для каждого города в каждый из трёх дней."
    ]
   },
   {
@@ -1346,7 +1268,7 @@
    "source": [
     "**Задание 22**\n",
     "\n",
-    "Создайте c помощью конструктора `pd.DataFrame` таблицу, где\n",
+    "Создадим c помощью конструктора `pd.DataFrame` таблицу, где\n",
     "* названия колонок — `['city', 'monday', 'wednesday', 'friday']`;\n",
     "* данные — результаты, которые вы получили с помощью `number_tracks`."
    ]
@@ -1427,9 +1349,8 @@
     ]
    },
    "source": [
-    "**Задание 23**\n",
     "\n",
-    "Сохраните таблицы с данными в две переменные:\n",
+    "Сохраним таблицы с данными в две переменные:\n",
     "* по Москве — в `moscow_general`;\n",
     "* по Санкт-Петербургу — в `spb_general`."
    ]
@@ -1470,7 +1391,7 @@
    "source": [
     "**Задание 24**\n",
     "\n",
-    "Создайте функцию `genre_weekday()` с четырьмя параметрами:\n",
+    "Создадим функцию `genre_weekday()` с четырьмя параметрами:\n",
     "* таблица (датафрейм) с данными,\n",
     "* день недели,\n",
     "* начальная временная метка в формате 'hh:mm', \n",
@@ -1509,10 +1430,9 @@
     ]
    },
    "source": [
-    "**Задание 25**\n",
     "\n",
     "\n",
-    "Cравните результаты функции `genre_weekday()` для Москвы и Санкт-Петербурга в понедельник утром (с 7:00 до 11:00) и в пятницу вечером (с 17:00 до 23:00):"
+    "Cравним результаты функции `genre_weekday()` для Москвы и Санкт-Петербурга в понедельник утром (с 7:00 до 11:00) и в пятницу вечером (с 17:00 до 23:00):"
    ]
   },
   {
@@ -1700,9 +1620,8 @@
     ]
    },
    "source": [
-    "**Задание 26**\n",
     "\n",
-    "Сгруппируйте таблицу `moscow_general` по жанру и посчитайте прослушивания треков каждого жанра методом `count()`. Затем отсортируйте результат в порядке убывания и сохраните его в таблице `moscow_genres`."
+    "Сгруппируем таблицу `moscow_general` по жанру и посчитайте прослушивания треков каждого жанра методом `count()`. Отсортируйте результат в порядке убывания и сохраним его в таблице `moscow_genres`."
    ]
   },
   {
@@ -1729,9 +1648,8 @@
     ]
    },
    "source": [
-    "**Задание 27**\n",
     "\n",
-    "Выведите на экран первые десять строк `moscow_genres`:"
+    "Выведем на экран первые десять строк `moscow_genres`:"
    ]
   },
   {
@@ -1779,12 +1697,11 @@
     ]
    },
    "source": [
-    "**Задание 28**\n",
     "\n",
     "\n",
-    "Теперь повторите то же и для Петербурга.\n",
+    "Повторим для Петербурга.\n",
     "\n",
-    "Сгруппируйте таблицу `spb_general` по жанру. Посчитайте прослушивания треков каждого жанра. Результат отсортируйте в порядке убывания и сохраните в таблице `spb_genres`:\n"
+    "Сгруппируем таблицу `spb_general` по жанру. Посчитаем прослушивания треков каждого жанра. Результат отсортируем в порядке убывания и сохраним в таблице `spb_genres`:\n"
    ]
   },
   {
@@ -1811,7 +1728,6 @@
     ]
    },
    "source": [
-    "**Задание 29**\n",
     "\n",
     "Выведите на экран первые десять строк `spb_genres`:"
    ]
